--- a/src/app/components/categoria/categoria.component.html
+++ b/src/app/components/categoria/categoria.component.html
@@ -1,1 +1,47 @@
-<p>categoria works!</p>
+<button class="btn btn-primary radius elevacion" data-bs-toggle="modal" data-bs-target="#modal-nueva">
+    <i class="fa-solid fa-plus"></i>
+</button>
+
+<div class="card mt-4 elevacion">
+    <div class="card-body">
+      
+        <div class="card">
+            <div class="card-header">
+              Código categoria
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Descripción de categoría</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <button class="btn btn-secondary radius elevacion">
+                <i class="fa-solid fa-pen"></i>
+              </button>
+              <button class="btn btn-danger ms-2 radius elevacion">
+                <i class="fa-solid fa-trash-can"></i>
+              </button>
+            </div>
+          </div>
+
+    </div>
+</div>
+
+<!-- Inicion modal nueva categoria -->
+
+<div class="modal fade" id="modal-nueva" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header bg-secondary">
+          <h5 class="modal-title text-white" id="exampleModalLabel">Nueva categoría</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Final modal nueva categoria -->
