--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark elevacion">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,7 +6,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a routerLink="/categoria-component" class="nav-link active" aria-current="page" href="#">Categorias</a>
+          <a routerLink="/categoria-component" class="nav-link active" aria-current="page" href="#">Categorías</a>
           <a routerLink="/producto-component" class="nav-link active" aria-current="page" href="#">Productos</a>
         </div>
       </div>
