Componente producto completo

--- a/src/app/components/categoria/categoria.component.html
+++ b/src/app/components/categoria/categoria.component.html
@@ -1,4 +1,8 @@
-<button class="btn btn-primary radius elevacion" 
+<div>
+  <h4>Registro categorías de productos</h4>
+</div>
+
+<button class="btn btn-primary radius elevacion mt-4" 
 data-bs-toggle="modal" data-bs-target="#modal-nueva"
 (click)="reiniciar_validacion()"
 >
